2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b44

 * Fix: Manual alignment of watermark failt when using IM.

 * CHANGE: Renamed Netpbm/NetPBM at various places to netpbm
           Also in function names, prefixes etc. !!! 

 * Change: Moved icons for slideshow.

 * Change: Watermark dialog.

2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b43

 * Fix: Album->rebuildCaptureDates was broken for subalbums.
        Added also a nice progessbar.

 * Fix/Change: Renamed Album->makeThumbnailRecursive into
               makeThumbnails($recursive = false)
               (Jep also progressbar ;-)

2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b42

 Method enhancements

 - Album->getParentAlbums

 - Album->resizeAllPhotos

 - ALL_WHERE_A_HTML_TAG_IS_RETURNED !!
  $attrs is now an array(), not a string !!
  
2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b41

 * Change: Remove fotoserve as Service ! Album Version bump.

 * New: Nice JS progessbar for album upgrade.

 * Fix: Added the js files for arrow nav and strengthmeter.

2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b40

 * New: Added one more skin.

2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b39

 * New: Arrow Navigation. Veeery Nice :-)

 * Change: Other navigation issues.

 * New: Added JS password strengthmeter.

2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b38

 * Change:

  - Code beautify

  - Code consolidation

  - Code cleanup

  - Wording

2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b37

 Security fixes.

 * Fix: Possible XSS protection in User->load and Album->load()

 * Fix: Stronger hash algorithm for new/lost password.

 * Fix: Added much better password strengthness.
   
 * Fix: Better check for valid album names.

 * New functions:
   - validAlbumName($name)
   - passwordStrength($password)
   - cleanRepetition($partLen, $string)

2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b36

 * Change: Nice new donate icon.

 * Change: Nice new Gallery 1.5.8 icon :-)))