@@ -965,6 +965,36 @@ class AlbumItem {
 		$this->caption = $caption;
 	}
 
+	function createCaption($dir, $captionType) {
+		global $gallery;
+		$dateTimeFormat = $gallery->app->dateTimeString;
+		$path = $this->image->getPath($dir, true);
+
+		switch ($captionType) {
+			case 0:
+				$caption = '';
+				break;
+
+			case 1:
+			default:
+				/* Use filename */
+				$caption = strtr($this->image->name, '_', ' ');
+				break;
+
+			case 2:
+				/* Use file cration date */
+				$caption = strftime($dateTimeFormat, filectime($path));
+				break;
+
+			case 3:
+				/* Use capture date */
+				$caption = strftime($dateTimeFormat, getItemCaptureDate($path));
+				break;
+		}
+
+		$this->setCaption($caption);
+	}
+
 	function isAlbum() {
 		return ($this->isAlbumName !== NULL) ? true : false;
 	}
