@@ -1,3 +1,15 @@
+2008-08-07 Jens Tkotz <jens@peino.de> 1.5.8-svn-b45
+
+ * New Methods:
+   - Album->canViewItem($user, $index, $full = false)
+   - Album->getAltText($index)
+   - AlbumItem->createCaption($dir, $captionType)
+
+ * Enhanced:
+   - Album->getCaptionName()
+   - Better Error handling in Album->getEmailMeList()
+   - User->printableName()
+
 2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b44
 
  * Fix: Manual alignment of watermark failt when using IM.
